--- a/detail.html
+++ b/detail.html
@@ -55,11 +55,11 @@
                     <button id="sitemessage" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="icon-megaphone"></i> </button>
                     <div class="dropdown-menu" role="menu" aria-labelledby="sitemessage">
                         <ul>
-                            <li class="first"><span class="time">25-06-01 </span><a href="detail.html">儿童节快乐！</a></li>
-                            <li><span class="time">25-05-31 </span><a href="detail.html">端午节快乐！</a></li>
-                            <li><span class="time">25-05-01 </span><a href="detail.html">劳动节快乐！</a></li>
-                            <li><span class="time">25-03-15 </span><a href="detail.html">拿下自己的第一个域名！</a></li>
-                            <li><span class="time">25-01-28 </span><a href="detail.html">2025年新年快乐！</a></li>
+                            <li class="first"><span class="time">25-06-01 </span><a href="#">儿童节快乐！</a></li>
+                            <li><span class="time">25-05-31 </span><a href="#">端午节快乐！</a></li>
+                            <li><span class="time">25-05-01 </span><a href="#">劳动节快乐！</a></li>
+                            <li><span class="time">25-03-15 </span><a href="#">拿下自己的第一个域名！</a></li>
+                            <li><span class="time">25-01-28 </span><a href="#">2025年新年快乐！</a></li>
                         </ul>
                         <div class="more-messages"><a href="qiqu.html">更多</a></div>
                     </div>
@@ -237,6 +237,7 @@
                     <div class="sidebar col-xs-12 col-sm-4 col-md-4">
                         <div class="widget widget_suxingme_postlist">
                             <h3><span>每日一曲</span></h3>
+                            <a>这个没什么用<br>(只有电脑端和平板端能看到，<br>就当个彩蛋，不定期更新)</a>
                             <ul class="recent-posts-widget">
                                 <li class="one">
                                     <a href="https://www.bilibili.com/video/BV1BcV2zLEd4/?spm_id_from=333.337.search-card.all.click" title="【MV】うっちゃい/ゆーり【オリジナル】">
@@ -310,7 +311,7 @@
                             <h3><span>热门标签</span></h3>
                             <div class="widge_tags">
                                 <div class="tag-items">
-                                    <a href="cby.html" class="tag-item">陈老师</a>
+                                    <a href="rw/cby.html" class="tag-item">陈老师</a>
                                     <a href="dym.html" class="tag-item">邓一明</a>
                                     <a href="ghy.html" class="tag-item">关涵予</a>
                                     <a href="grh.html" class="tag-item">高瑞含</a>
@@ -383,13 +384,7 @@
         </form>
         <div class="close-search"> <span class="close-top"></span> <span class="close-bottom"></span> </div>
     </div>
-    <div class="f-weixin-dropdown">
-        <div class="tooltip-weixin-inner">
-            <h3>关注我们的公众号</h3>
-            <div class="qcode"> <img src="uploads/allimg/20190220/b0049f8a80462f1a6ceafb5970c5a5cb.jpg" width="160" height="160" alt="微信公众号"> </div>
-        </div>
-        <div class="close-weixin"> <span class="close-top"></span> <span class="close-bottom"></span> </div>
-    </div>
+
 
     <!-- 应用插件标签 start -->
     <!-- 应用插件标签 end -->
