--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     <button id="sitemessage" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="icon-megaphone"></i> </button>
                     <div class="dropdown-menu" role="menu" aria-labelledby="sitemessage">
                         <ul>
-                            <li class="first"><span class="time">25-06-25 </span><a href="detail.html">中考必胜！</a></li>
-                            <li><span class="time">25-06-01 </span><a href="detail.html">儿童节快乐！</a></li>
-                            <li><span class="time">25-05-31 </span><a href="detail.html">端午节快乐！</a></li>
-                            <li><span class="time">25-05-01 </span><a href="detail.html">劳动节快乐！</a></li>
-                            <li><span class="time">25-01-28 </span><a href="detail.html">2025年新年快乐！</a></li>
+                            <li class="first"><span class="time">25-06-25 </span><a href="#">中考必胜！</a></li>
+                            <li><span class="time">25-06-01 </span><a href="#">儿童节快乐！</a></li>
+                            <li><span class="time">25-05-31 </span><a href="#">端午节快乐！</a></li>
+                            <li><span class="time">25-05-01 </span><a href="#">劳动节快乐！</a></li>
+                            <li><span class="time">25-01-28 </span><a href="#">2025年新年快乐！</a></li>
                         </ul>
                         <div class="more-messages"><a href="https://weibo.com/">更多</a></div>
                     </div>
@@ -72,19 +72,19 @@
             <div class="container">
                 <div class="row">
                     <div class="owl-carousel top-slide-two">
-                        <div class="item" style="background: url(img/hz4.jpg); background-repeat: no-repeat;background-size: cover;background-position: center top;">
-                            <div class="slider-content">
-                                <div class="slider-content-item">
-                                    <div class="slider-cat clearfix">合照 </div>
-                                    <h2> <a class="read-slider" href="detail.html" title="六班六班，意气风发">六班六班，意气风发</a> </h2>
-                                </div>
-                            </div>
-                        </div>
                         <div class="item" style="background: url(img/hz-2.jpg); background-repeat: no-repeat;background-size: cover;background-position: center top;">
                             <div class="slider-content">
                                 <div class="slider-content-item">
                                     <div class="slider-cat clearfix">活动 </div>
-                                    <h2> <a class="read-slider" href="#" title="百日誓师！">百日誓师！</a> </h2>
+                                    <h2> <a class="read-slider" href="#" title="大展宏图！">大展宏图！</a> </h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item" style="background: url(img/hz4.jpg); background-repeat: no-repeat;background-size: cover;background-position: center top;">
+                            <div class="slider-content">
+                                <div class="slider-content-item">
+                                    <div class="slider-cat clearfix">合照 </div>
+                                    <h2> <a class="read-slider" href="#" title="六班永不言败！">六班永不言败！</a> </h2>
                                 </div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                             <div class="slider-content">
                                 <div class="slider-content-item">
                                     <div class="slider-cat clearfix">活动 </div>
-                                    <h2> <a class="read-slider" href="detail.html" title="看比赛">看比赛</a> </h2>
+                                    <h2> <a class="read-slider" href="#" title="看比赛">看比赛</a> </h2>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                                     <h3><i class="icon-record-outline"></i><span>中考加油！</span></h3>
                                 </a>
                             </div>
-                            <div class="hots-title"> <i class="icon-record-outline"></i><a href="detail.html">网站更新公告</a> </div>
+                            <div class="hots-title"> <i class="icon-record-outline"></i><a href="#">网站更新公告</a> </div>
                             <div class="hots-title"> <i class="icon-record-outline"></i><a href="#">体育中考</a> </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                         <div class="thumbnail-cat">
                             <div class="image">
                                 <div class="index-cat-box" style="background-image:url(img/2025-05-09-37-2.jpg)">
-                                    <a class="istop" href="detail.html">
+                                    <a class="istop" href="#">
                                         <div class="overlay"></div>
                                         <div class="title">
                                             <span>活动 </span>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="image">
                                 <div class="index-cat-box" style="background-image:url(img/2024-03-21-1.jpg)">
-                                    <a class="istop" href="detail.html">
+                                    <a class="istop" href="#">
                                         <div class="overlay"></div>
                                         <div class="title">
                                             <span>劳动 </span>
@@ -151,7 +151,7 @@
                             </div>
                             <div class="image">
                                 <div class="index-cat-box" style="background-image:url(img/2022-12-09-3.jpg)">
-                                    <a class="istop" href="detail.html">
+                                    <a class="istop" href="#">
                                         <div class="overlay"></div>
                                         <div class="title">
                                             <span>活动 </span>
@@ -173,11 +173,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>考试</a></div>
-                                        <h2><a href="detail.html" title="体育中考">体育中考</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>考试</a></div>
+                                        <h2><a href="#" title="体育中考">体育中考</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2025-05-27.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -200,11 +200,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>纪念</a></div>
-                                        <h2><a href="detail.html" title="2025年大型活动！">2025年大型活动！</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>纪念</a></div>
+                                        <h2><a href="#" title="2025年大型活动！">2025年大型活动！</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2025-05-09-116.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -227,11 +227,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>纪念</a></div>
-                                        <h2><a href="detail.html" title="青春逐梦正当时 百日竞渡展锋芒！">青春逐梦正当时 百日竞渡展锋芒!</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>纪念</a></div>
+                                        <h2><a href="#" title="青春逐梦正当时 百日竞渡展锋芒！">青春逐梦正当时 百日竞渡展锋芒!</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2025-03-20-4.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -254,11 +254,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>纪念</a></div>
-                                        <h2><a href="detail.html" title="2024年运动会！">2024年运动会！</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>纪念</a></div>
+                                        <h2><a href="#" title="2024年运动会！">2024年运动会！</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2024-06-21-22-2.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -281,11 +281,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>劳动</a></div>
-                                        <h2><a href="detail.html" title="2024年清雪活动！">2024年清雪活动！</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>劳动</a></div>
+                                        <h2><a href="#" title="2024年清雪活动！">2024年清雪活动！</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2024-03-21-1.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -308,11 +308,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>体育</a></div>
-                                        <h2><a href="detail.html" title="2023年体活课拉雪圈！">2023年体活课拉雪圈！</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>体育</a></div>
+                                        <h2><a href="#" title="2023年体活课拉雪圈！">2023年体活课拉雪圈！</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2023-12-07-3.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -335,11 +335,11 @@
                             <div class="ajax-load-con content excerpt-one">
                                 <div class="content-box posts-image-box">
                                     <div class="posts-default-title">
-                                        <div class="post-entry-categories"><a href='detail.html'>活动</a><a href='detail.html'>英语</a></div>
-                                        <h2><a href="detail.html" title="2023年英语配音活动！">2023年英语配音活动！</a></h2>
+                                        <div class="post-entry-categories"><a href='#'>活动</a><a href='#'>英语</a></div>
+                                        <h2><a href="#" title="2023年英语配音活动！">2023年英语配音活动！</a></h2>
                                     </div>
                                     <p class="focus">
-                                        <a href="detail.html" class="thumbnail">
+                                        <a href="#" class="thumbnail">
                                             <span class="item"><span class="thumb-span"><img src="img/2023-11-23-2.jpg" class="thumb"></span></span>
                                         </a>
                                     </p>
@@ -369,6 +369,7 @@
                     <div class="sidebar col-xs-12 col-sm-4 col-md-4">
                         <div class="widget widget_suxingme_postlist">
                             <h3><span>每日一曲</span></h3>
+                            <a>这个没什么用<br>(只有电脑端和平板端能看到，<br>就当个彩蛋，不定期更新)</a>
                             <ul class="recent-posts-widget">
                                 <li class="one">
                                     <a href="https://www.bilibili.com/video/BV1BcV2zLEd4/?spm_id_from=333.337.search-card.all.click" title="【MV】うっちゃい/ゆーり【オリジナル】">
@@ -442,7 +443,7 @@
                             <h3><span>热门标签</span></h3>
                             <div class="widge_tags">
                                 <div class="tag-items">
-                                    <a href="cby.html" class="tag-item">陈老师</a>
+                                    <a href="rw/cby.html" class="tag-item">陈老师</a>
                                     <a href="dym.html" class="tag-item">邓一明</a>
                                     <a href="ghy.html" class="tag-item">关涵予</a>
                                     <a href="grh.html" class="tag-item">高瑞含</a>
